# CudaGLSimulation

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
include/cuda/: cuda_utils.cuh
include/gl/: fluid_simulation.hpp  gl_utils.hpp  heat_simulation.hpp  renderer.hpp  simulation.hpp
remote-fluid-renderer/: CMakeLists.txt  README.md
remote-fluid-renderer/include/cuda/: cuda_utils.cuh
remote-fluid-renderer/include/gl/: fluid_simulation.hpp  heat_simulation.hpp  renderer.hpp  simulation.hpp
remote-fluid-renderer/shaders/: quad.frag
remote-fluid-renderer/src/: main.cpp
remote-fluid-renderer/src/cuda/: cuda_utils.cu  fluid_simulation.cu  heat_simulation.cu  simulation.cu
remote-fluid-renderer/src/gl/: gl_utils.cpp  renderer.cpp
shaders/: quad.vert
src/: main.cpp
src/cuda/: fluid_simulation.cu  heat_simulation.cu  simulation.cu
src/gl/: gl_utils.cpp  renderer.cpp
